# rl_petoi_stm32

./: .gitignore  ARTIFACT_MANIFEST.txt  C:\Users\Dell\AppData\Local\Temp\codex-git-index0ZM6ta\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexBOsN2H\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexIYyu6S\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexMmV3w9\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexd6NHAK\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexnKNgyJ\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexpVfcmV\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexwND14V\index  C:\Users\Dell\AppData\Local\Temp\codex-git-indexzsE8tP\index  README.md  install_codex.sh  requirements.txt
assets/: README.md
docs/: README.md  artifact_backup.md  bittle_flash_bringup.md  bittle_joint_mapping_log.md  deployable_v0_interface.md  environment.md  handoff.md  hardware_bringup_checklist.md  interview_brief.md  model_sources.md  reverse_ssh_recovery.md  rl_serial_protocol_v0.md  stm32_bluetooth_link.md  training_status.md
experiments/: README.md  bittle_like_v0_sanity.md  bittle_like_v0_slow_forward.md  bittle_like_v0_stand.md  bittle_like_v1_visual.md  gait_baseline_comparison.md  milestone_01_minimal_stable_gait.md  petoi_bittle_v0_demo_milestone.md  petoi_bittle_v0_gait_diagnosis.md  petoi_bittle_v0_open_loop_trot.md  petoi_bittle_v0_slow_forward.md  petoi_bittle_v0_stand_calibration.md  petoi_bittle_v0_stand_milestone.md  petoi_bittle_v0_trot_residual.md  petoi_bittle_v0_trot_residual_v2.md  petoi_bittle_v0_trot_residual_v3_phase_fixed.md  petoi_bittle_v0_trot_residual_v3_phase_fixed_100k_continue.md  petoi_bittle_v0_zero_action_residual_trot.md  reward_baselines.md
firmware/: README.md
firmware/petoi_opencat/: README.md  rl_ble_bridge_v0.cpp  rl_ble_bridge_v0.h  rl_command_adapter_v0.cpp  rl_command_adapter_v0.h  rl_dispatch_bridge_v0.cpp  rl_dispatch_bridge_v0.h  rl_frame_reader_v0.cpp  rl_frame_reader_v0.h  rl_opencat_port_map_v0.md  rl_patch_design_v0.md  rl_serial_protocol_v0.cpp  rl_serial_protocol_v0.h
firmware/stm32h747_disco/: README.md  rl_control_loop_v0.c  rl_control_loop_v0.h  rl_policy_inference_v0.c  rl_policy_inference_v0.h  rl_policy_runtime_v0.c  rl_policy_runtime_v0.h  rl_serial_protocol_v0.c  rl_serial_protocol_v0.h  rl_serial_transport_v0.c  rl_serial_transport_v0.h  rl_stedgeai_policy_v0.c  rl_stedgeai_policy_v0.h  rl_uart8_transport_v0.c  rl_uart8_transport_v0.h
firmware/stm32h747_disco/m7_inference_smoke/: CMakeLists.txt  main.c  petoi_official_gait_baseline_v0.h  stm32h747xih_m7_smoke.ld  wkf_reference_v0.h
models/: README.md
protocol/: README.md  bittle_bringup_safety_v0.json  bittle_stand_safety_v0.json  control_interface_v0.md  rl_serial_protocol_v0.md
protocol/test_vectors/: bittle_bringup_v0.json  control_interface_v0.json  rl_serial_protocol_v0.json
scripts/: analyze_gait_contacts.sh  analyze_policy_actions.sh  bittle_bringup_probe.sh  bittle_policy_runner.sh  bittle_preflight_check.sh  bittle_shadow_runner.sh  bittle_wkf_runner.sh  build_petoi_mjcf.sh  build_petoi_urdf.sh  build_stm32_m7_smoke.sh  check_env.sh  check_policy_deployability.sh  check_stedgeai.sh  compile_opencat_rl_get_state.sh  evaluate.sh  evaluate_zero_action.sh  export_policy.sh  fetch_petoi_model.sh  generate_bittle_bringup_vectors.sh  generate_stedgeai.sh  pack_artifacts.sh  prepare_stm32_ai_runtime.sh  prepare_stm32_cmsis.sh  record_eval.sh  select_checkpoint.sh  setup_env.sh  setup_opencat_arduino_cli.sh  setup_reverse_ssh_frp.sh  setup_stedgeai.sh  setup_stm32_cubeh7.sh  smoke_petoi_open_loop_gait.sh  switch_codex_account_preserve_history.sh  tensorboard.sh  test_stedgeai_adapter.sh  test_stedgeai_runtime_link.sh  test_stm32_protocol.sh  train.sh  validate_petoi_mjcf.sh  validate_petoi_urdf.sh  verify_policy_vector.sh
sim/: README.md  __init__.py
sim/envs/: __init__.py  gait_reference.py  simple_quadruped_env.py  simple_quadruped_interface.py
sim/robots/: bittle_like_v0.xml  bittle_like_v1_visual.xml  simple_quadruped.xml
sim/tests/: test_simple_quadruped_env.py
tools/: README.md  analyze_gait_contacts.py  analyze_policy_actions.py  bittle_bringup_probe.py  bittle_policy_runner.py  bittle_shadow_runner.py  bittle_wkf_runner.py  build_petoi_bittle_mjcf.py  build_petoi_bittle_urdf.py  calibrate_petoi_stand.py  capture_petoi_official_gait.py  generate_bittle_bringup_vectors.py  inspect_petoi_bittle_description.py  rl_serial_protocol_v0.py  select_checkpoint.py  smoke_petoi_mjcf.py  smoke_petoi_open_loop_gait.py  validate_mujoco_model.py
training/: README.md
training/configs/: ppo_bittle_like_v0.yaml  ppo_bittle_like_v0_slow_forward.yaml  ppo_bittle_like_v0_stand.yaml  ppo_bittle_like_v1_visual_stand.yaml  ppo_petoi_bittle_v0_slow_forward.yaml  ppo_petoi_bittle_v0_stand.yaml  ppo_petoi_bittle_v0_trot_residual.yaml  ppo_petoi_bittle_v0_trot_residual_deployable_v0.yaml  ppo_petoi_bittle_v0_trot_residual_deployable_v0_100k_continue.yaml  ppo_simple_quadruped.yaml  (+5 more)
(+30 files in other folders)
